--- a/hugo.toml
+++ b/hugo.toml
@@ -1,11 +1,11 @@
-title = "Awesome Hugo blog"
+title = "Nize Echo"
 baseURL = 'https://hba.sid.one/'
 
 # This is what goes in <html lang="">
-languageCode = 'en-us'
+languageCode = 'ru-ru'
 
 # This defines how dates are formatted
-defaultContentLanguage = "en-gb"
+defaultContentLanguage = "ru-ru"
 
 # Enable emojis globally
 enableEmoji = true
@@ -13,17 +13,6 @@ ignoreErrors = ["additional-script-loading-error"] # ignore error of loading add
 
 # traditional way: theme component resides in directory 'themes'
 theme = "hugo-blog-awesome"
-
-# modern way: pull in theme component as hugo module
-#[module]
-  # Uncomment the next line to build and serve using local theme clone declared in the named Hugo workspace:
-  # workspace = "hugo-blog-awesome.work"
-  #[module.hugoVersion]
-    #extended = true
-    #min = "0.87.0"
-  #[[module.imports]]
-    #path = "github.com/hugo-sid/hugo-blog-awesome"
-    #disable = false
 
 [services]
 # To enable Google Analytics 4 (gtag.js) provide G-MEASUREMENT_ID below.
@@ -48,38 +37,38 @@ theme = "hugo-blog-awesome"
 		ordered = false # generates <ul> instead of <ol>
 
 ############################## English language ################################
-[Languages.en-gb]
+[Languages.en-us]
   languageName = "English"
-  languageCode = "en-gb"
+  languageCode = "en-us"
   contentDir = "content/en"
-  weight = 1
+  weight = 2
 
-  [Languages.en-gb.menu]
-  [[Languages.en-gb.menu.main]]
+  [Languages.en-us.menu]
+  [[Languages.en-us.menu.main]]
     # The page reference (pageRef) is useful for menu highlighting
     # When pageRef is set, setting `url` is optional; it will be used as a fallback if the page is not found.
     pageRef="/"
     name = 'Home'
     url = '/'
     weight = 10
-  [[Languages.en-gb.menu.main]]
+  [[Languages.en-us.menu.main]]
     pageRef="posts"
     name = 'Posts'
     url = '/posts/'
     weight = 20
-  [[Languages.en-gb.menu.main]]
-    pageRef="about"
-    name = 'About'
-    url = '/about/'
-    weight = 30
+#  [[Languages.en-us.menu.main]]
+#    pageRef="about"
+#    name = 'About'
+#    url = '/about/'
+#    weight = 30
 
-[Languages.en-gb.params]
-  sitename = "Awesome hugo blog"
-  defaultColor = "dark" # set color mode: dark, light, auto
+[Languages.en-us.params]
+  sitename = "Nize Echo"
+  defaultColor = "auto" # set color mode: dark, light, auto
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
-  description = "Minimal Hugo blog theme with light and dark mode support"
+  description = "A digital voice, echoing through the noise of the information world."
   mainSections = ['posts']
   toc = true # set to false to disable table of contents 'globally'
   tocOpen = false # set to true to open table of contents by default
@@ -96,15 +85,15 @@ theme = "hugo-blog-awesome"
   # full - includes full blog post in the RSS feed. Generated using Hugo .Content .
   # By default (or if nothing is specified), summary is used.
 
-[Languages.en-gb.params.author]
+[Languages.en-us.params.author]
   avatar = "avatar.jpg" # put the file in assets folder; also ensure that image has same height and width
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
-  intro = "Awesome hugo blog"
-  name = "Sidharth R"
-  description = "A fast, minimalistic Hugo theme with light and dark mode support, for running a personal site or blog."
+  intro = "Nize Echo"
+  name = "Nikita Zinovev"
+  description = "A digital voice, echoing through the noise of the information world."
 
 # Allow to override webmanifest options
-[Languages.en-gb.params.webmanifest]
+[Languages.en-us.params.webmanifest]
   name = "sitename" # will use "params.sitename" or "title" by default
   short_name = "sitename" # same as name
   start_url = "/" # will use homepage url by default
@@ -129,22 +118,22 @@ theme = "hugo-blog-awesome"
     weight = 10
   [[Languages.ru-ru.menu.main]]
     pageRef="posts"
-    name = 'Записи'
+    name = 'Статьи'
     url = '/posts/'
     weight = 20
-  [[Languages.ru-ru.menu.main]]
-    pageRef="about"
-    name = 'О проекте'
-    url = '/about/'
-    weight = 30
+#  [[Languages.ru-ru.menu.main]]
+#    pageRef="about"
+#    name = 'О проекте'
+#    url = '/about/'
+#    weight = 30
 
 [Languages.ru-ru.params]
-  sitename = "Превосходный hugo блог"
-  defaultColor = "dark" # set color mode: dark, light, auto
+  sitename = "Nize Echo"
+  defaultColor = "auto" # set color mode: dark, light, auto
   # Setting it to 'auto' applies the color scheme based on the visitor's device color preference.If you don't specify anything, ignore this parameter, or leave it blank,
   # the default value is set to 'auto'.
   # You can take a look at layouts/index.html for more information.
-  description = "Минималистичная тема для блога на Hugo с поддержкой светлого и тёмного режима"
+  description = "Цифровой голос, звучащий сквозь шум информационного мира."
   mainSections = ['posts']
   toc = true # set to false to disable table of contents 'globally'
   tocOpen = false # set to true to open table of contents by default
@@ -164,9 +153,9 @@ theme = "hugo-blog-awesome"
 [Languages.ru-ru.params.author]
   avatar = "avatar.jpg" # put the file in assets folder; also ensure that image has same height and width
   # Note: image is not rendered if the resource(avatar image) is not found. No error is displayed.
-  intro = "Превосходный hugo блог"
-  name = "Sidharth R"
-  description = "Быстрая, минималистичная тема для Hugo с поддержкой светлого и тёмного режима для использования на персональных сайтах и блогах."
+  intro = "Nize Echo"
+  name = "Nikita Zinovev"
+  description = "Цифровой голос, звучащий сквозь шум информационного мира."
 
 # Allow to override webmanifest options
 [Languages.ru-ru.params.webmanifest]
@@ -185,11 +174,11 @@ theme = "hugo-blog-awesome"
 
 [[params.socialIcons]]
 name = "github"
-url = "https://github.com/hugo-sid"
+url = "https://github.com/nzinovev"
 
 [[params.socialIcons]]
-name = "twitter"
-url = "https://twitter.com"
+name = "telegram"
+url = "https://t.me/nizeEcho"
 
 [[params.socialIcons]]
 name = "Rss"
